Configure production CORS for Vercel